--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,31 +1,32 @@
 .container {
-    margin: 0 auto;
-    width: 50%;
+  margin: 0 auto;
+  width: 50%;
 }
 
 .content {
-    padding: 5px;
-    margin: 0 auto;
+  padding: 5px;
+  margin: 0 auto;
 }
 
 .content span {
-    width: 250px;
+  width: 250px;
 }
 
 .dz-message {
-    text-align: center;
-    font-size: 28px;
+  text-align: center;
+  font-size: 28px;
 }
 
 .img-effect {
-    transition: .5s ease;
-    opacity: 1;
+  transition: 0.5s ease;
+  opacity: 1;
 }
 
 .img-effect:hover {
-    opacity: 0.3;
+  opacity: 0.3;
 }
 
-.selected{
-    border: #4e73dfbf 2px solid;
+.selected {
+  border: #4e73dfbf 2px solid;
 }
+
