--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,6 +30,10 @@
   border: #4e73dfbf 2px solid;
 }
 
+.btn-card{
+  background-color: red;
+}
+
 .btn-card:focus {
   outline: none;
   box-shadow: none;
